// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`brucharacters should add and remove characters from the database regardless of case 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "name.first_lower": "customchar",
  },
}
`;

exports[`brucharacters should add and remove characters from the database regardless of case 2`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "name.first_lower": "customchar",
  },
}
`;

exports[`brucharacters should display the list of characters in the database 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "name.first_lower": "customcharlist",
  },
}
`;

exports[`brucharacters should display the list of characters in the database 2`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "c:limit": "100",
    "character_id": "testlist",
  },
}
`;

exports[`brucharacters should not remove a character that is not in the list 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "name.first_lower": "unknownchar",
  },
}
`;

exports[`brucharacters should say that the character is already in the list 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "name.first_lower": "customchardup",
  },
}
`;

exports[`brucharacters should say that the character is already in the list 2`] = `
{
  "pathname": "/s:test/get/ps2:v2/character_name",
  "searchParams": {
    "name.first_lower": "customchardup",
  },
}
`;
